--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ html
     <!-- تذييل الصفحة -->
     <footer>
         <p>تواصل معنا:</p>
-        <p>البريد الإلكتروني: info@mutar-solar.com</p>
-        <p>الهاتف: +966 123 456 789</p>
+        <p>البريد الإلكتروني: baraamatar11@gmail.com</p>
+        <p>الهاتف: +963 958 944 604</p>
         <p>&copy; 2025 شركة مطر للألواح الطاقة المتجددة والقواعد</p>
     </footer>
 </body>
