--- a/index.html
+++ b/index.html
@@ -1,67 +1,72 @@
-html
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شركة مطر للألواح الطاقة المتجددة والقواعد</title>
-    <link rel="stylesheet" href="style.css">
+    <title>ألواح الطاقة الشمسية</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/logo.png"> <!-- اللوجو -->
 </head>
 <body>
-    <!-- رأس الصفحة -->
-    <header>
-        <div class="logo">
-            <img src="logo.png" alt="شعار شركة مطر">
+    <!-- القائمة المنسدلة -->
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    <nav class="menu" id="menu">
+        <a href="#home" onclick="closeMenu()">الرئيسية</a>
+        <a href="#about" onclick="closeMenu()">من نحن</a>
+        <a href="#services" onclick="closeMenu()">خدماتنا</a>
+        <a href="#payment" onclick="closeMenu()">الدفع الإلكتروني</a>
+        <a href="#contact" onclick="closeMenu()">تواصل معنا</a>
+    </nav>
+
+    <!-- الصفحة الرئيسية -->
+    <section id="home" class="active">
+        <h1>أعمالنا</h1>
+        <div class="gallery">
+            <div class="gallery-item">
+                <p>نقدم لكم أفضل حلول الطاقة الشمسية بتقنيات حديثة.</p>
+                <img src="images/work1.jpg" alt="عمل 1" onclick="openModal('images/work1.jpg')">
+            </div>
+            <div class="gallery-item">
+                <p>تركيب ألواح الطاقة الشمسية بجودة عالية.</p>
+                <img src="images/work2.jpg" alt="عمل 2" onclick="openModal('images/work2.jpg')">
+            </div>
+            <!-- أضف بقية الصور هنا بنفس الطريقة -->
         </div>
-        <h1>شركة مطر للألواح الطاقة المتجددة والقواعد</h1>
-    </header>
-
-    <!-- مقدمة عن الطاقة الشمسية -->
-    <section class="intro">
-        <h2>ما هي الطاقة الشمسية؟</h2>
-        <p>
-            الطاقة الشمسية هي أحد أهم مصادر الطاقة المتجددة التي تعتمد على تحويل ضوء الشمس إلى كهرباء باستخدام الألواح الشمسية. تعتبر الطاقة الشمسية صديقة للبيئة وتساهم في تقليل الانبعاثات الكربونية.
-        </p>
-        <img src="solar-panels.jpg" alt="ألواح طاقة شمسية">
     </section>
 
-    <!-- أهمية القواعد -->
-    <section class="importance">
-        <h2>أهمية القواعد في أنظمة الطاقة الشمسية</h2>
-        <p>
-            القواعد هي العنصر الأساسي الذي يدعم الألواح الشمسية ويحافظ على ثباتها. يجب أن تكون القواعد قوية ومصممة بشكل مناسب لتحمل الظروف الجوية المختلفة.
-        </p>
-        <img src="solar-base.jpg" alt="قواعد ألواح شمسية">
+    <!-- قسم "من نحن" -->
+    <section id="about">
+        <h2>من نحن</h2>
+        <p>نحن شركة مطر المتخصصة في تركيب ألواح الطاقة الشمسية. نقدم حلولًا مبتكرة وموثوقة لتلبية احتياجاتكم من الطاقة النظيفة والمستدامة. نتميز بأدائنا العالي وجودة خدماتنا التي تلبي توقعات عملائنا.</p>
     </section>
 
-    <!-- أنواع القواعد -->
-    <section class="types">
-        <h2>أنواع القواعد</h2>
-        <ul>
-            <li>قواعد أرضية</li>
-            <li>قواعد أسطح</li>
-            <li>قواعد مائلة</li>
-            <li>قواعد متحركة</li>
-        </ul>
-    </section>
-
-    <!-- الخدمات المقدمة -->
-    <section class="services">
+    <!-- قسم "خدماتنا" -->
+    <section id="services">
         <h2>خدماتنا</h2>
-        <ul>
-            <li>تركيب الألواح الشمسية</li>
-            <li>تصميم وتصنيع القواعد</li>
-            <li>صيانة أنظمة الطاقة الشمسية</li>
-            <li>استشارات في مجال الطاقة المتجددة</li>
-        </ul>
+        <p>يتوفر لدينا قواعد مختلفة لجميع الألواح الشمسية وبجميع المقاسات. نقدم خدمات شاملة تشمل التصميم والتركيب والصيانة لضمان أداء مثالي لأنظمة الطاقة الشمسية.</p>
     </section>
 
-    <!-- تذييل الصفحة -->
-    <footer>
-        <p>تواصل معنا:</p>
+    <!-- قسم الدفع الإلكتروني -->
+    <section id="payment">
+        <h2>الدفع الإلكتروني</h2>
+        <p>يمكنك الدفع عبر حساب البنك البركة. الرجاء استخدام التفاصيل التالية:</p>
+        <p>رقم الحساب: XXXX-XXXX-XXXX-XXXX</p>
+        <p>عند إدخال بيانات الـ IBAN، سيتم التحقق من المعلومات وإكمال العملية.</p>
+    </section>
+
+    <!-- تواصل معنا -->
+    <section id="contact">
+        <h2>تواصل معنا</h2>
+        <p>الهاتف: 0958944604</p>
         <p>البريد الإلكتروني: baraamatar11@gmail.com</p>
-        <p>الهاتف: +963 958 944 604</p>
-        <p>&copy; 2025 شركة مطر للألواح الطاقة المتجددة والقواعد</p>
-    </footer>
+    </section>
+
+    <!-- نافذة الصورة الموسعة -->
+    <div id="modal" class="modal">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img class="modal-content" id="modal-img">
+    </div>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
