--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
         <img class="modal-content" id="modal-img">
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="account.js"></script>
 </body>
 </html>
