--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ألواح الطاقة الشمسية</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- ربط ملف CSS -->
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo.png"> <!-- اللوجو -->
 </head>
 <body>
@@ -67,6 +68,6 @@
         <img class="modal-content" id="modal-img">
     </div>
 
-    <script src="account.js"></script>
+    <script src="account.js" defer></script>
 </body>
 </html>
