--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
         <img class="modal-content" id="modal-img">
     </div>
 
-    <script src="account.js" defer></script>
+    <script src="legendary-happiness/account.js" defer></script>
 </body>
 </html>
