--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ألواح الطاقة الشمسية</title>
     <!-- ربط ملف CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="legendary-happiness/style.css">
     <link rel="icon" href="images/logo.png"> <!-- اللوجو -->
 </head>
 <body>
